# kdb-manager

./: .env  .gitignore  Dockerfile  Dockerfile.dockerignore  LICENSE  README.md  build.sh  docker-compose.yml  encoder.py  faq.py  kdb_manager.py  pyproject.toml  query_normalizer.py  run.sh  tools_sample.py
config/: __init__.py
modules/: dependencies.py  redis.py  singleton_meta.py
routes/: collection.py  document.py  feedback.py  query_cache.py  search.py  vision.py  voc.py
wrapper/: logger_wrapper.py  rabbitmq_wrapper.py  rabbitmq_wrapper_for_rag.py  redis_wrapper.py
