[project]
name = "kdb-manager"
version = "2.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "fastembed>=0.7.1",
    "motor>=3.7.1",
    "openai>=1.97.0",
    "pandas>=2.3.1",
    "pydantic-settings>=2.10.1",
    "python-json-logger>=3.3.0",
    "qdrant-client>=1.14.3",
    "sentence-transformers>=5.0.0",
    "uvicorn>=0.35.0",
    "transformers>=4.51.0",
    "aiohttp>=3.13.2",
    "redis[asyncio]>=5.0.0",
    "aio-pika>=9.0.0",
]


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
